--- a/frontend/kabina_project_ui/src/app/kabina/components/user-list/user-list.component.html
+++ b/frontend/kabina_project_ui/src/app/kabina/components/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 
 <div id="addBtnDiv" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 padding-none ">
     <app-read-xlsx></app-read-xlsx>
-    <input class="btn btn-default  pull-left" (click)="addListUser()" type="button" value="Add List" >
+    <input *ngIf = "!hideBtn" class="btn btn-default  pull-left" (click)="addListUser()" type="button" value="Add List" >
     <button type="button" class="btn btn-default" id="addBtn"(click)="modalAddUser(templateAddUser)">
         <span class="glyphicon glyphicon-plus "></span>
     </button>
@@ -17,26 +17,27 @@
                 </button>
               </div>
             
-            <div class="form-group">
+            <div class="form-group" >
               <label>Name</label>
-              <input class="form-control"  name="userName" [ngModel] ="userName">
+              <input class="form-control has-warning" name="userName" [(ngModel)] ="userName" >
             </div>
+            
             <div class="form-group">
               <label>Password</label>
-              <input class="form-control"  name="password" [ngModel] ="password">
+              <input class="form-control"  name="password" [(ngModel)] ="password" required >
             </div>
             <div class="form-group">
                 <label >Short Name</label>
-                <input  class="form-control" name="userShortName" [ngModel] ="userShortName" >
+                <input  class="form-control" name="userShortName" [(ngModel)] ="userShortName" required >
             </div>
             <div class="form-group">
                 <label >Email address</label>
                 <input type="email" class="form-control" 
-                placeholder="Enter email" name="email" [ngModel] ="email">
+                placeholder="Enter email" name="email" [(ngModel)] ="email" required >
             </div>
             <div class="form-group">
               <label >Phone</label>
-              <input  class="form-control" name="phone" [ngModel] ="phone">
+              <input  class="form-control" name="phone" [(ngModel)] ="phone">
           </div>
             <div class="form-group">
                 <label >Role</label>
@@ -44,7 +45,7 @@
             </div>
             
             <div class="btn-toolbar">
-                <button type="submit" class="btn btn-primary" >Submit</button>
+                <button type="submit" class="btn btn-primary" [disabled]="addUserForm.form.pristine || addUserForm.form.invalid">Submit</button>
                 <button type="button" class="btn btn-default" (click)="modalRef.hide()">Cancel</button>
             </div>
            
